--- a/app/src/main/res/layout/lista_layout.xml
+++ b/app/src/main/res/layout/lista_layout.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/email_txt"
+        android:id="@+id/idemail_txt"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/foto_img"
-        app:layout_constraintTop_toBottomOf="@+id/email_txt"
+        app:layout_constraintTop_toBottomOf="@+id/idemail_txt"
         app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
